# users-service

./: README.md  init.sql  pyproject.toml
cqrs/: commands.py
tests/: conftest.py  test_adapters.py
users/: model.py  ports.py  schemas.py  settings.py
users/adapters/: accounts.py  emails.py  schemas.py  sessions.py  setup.py  users.py
users/services/nextauth/: commands.py
